--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "slack app",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -18,5 +18,8 @@
   "homepage": "https://github.com/blineberry/fancypanda-slackbot#readme",
   "dependencies": {
     "@slack/bolt": "^3.13.1"
+  },
+  "devDependencies": {
+    "jest": "^29.5.0"
   }
 }
